<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    tools:context=".IndividualActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="350dp"
            android:layout_height="150dp"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:textSize="15dp"
                android:padding="5dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/imageEditBackground"
                />
            <ImageView
                android:layout_marginTop="70dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/rb_catToAnime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CatToAnime"
                    android:textSize="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:onClick="onRadioButtonClicked"/>
                <View
                    android:id="@+id/v_line"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:background="#000000" />
                <RadioButton android:id="@+id/rb_animeToCat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AnimeToCat"
                    android:textSize="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="350dp"
            android:layout_height="385dp"
            card_view:cardElevation="5dp"
            card_view:cardCornerRadius="15dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/btn_open_gallery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OpenGallery"
                        />

                    <TextView
                        android:layout_marginTop="1dp"
                        android:id="@+id/tv_select_image_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="123dp"
                        android:text="@string/select_image_result"
                        />
                    <ImageView
                        android:id="@+id/iv_select_image_result"
                        android:layout_width="256px"
                        android:layout_height="256px"
                        android:layout_marginStart="123dp"

                        />

                    <Button
                        android:layout_marginTop="10dp"
                        android:id="@+id/btn_upload_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/UploadImage"
                        />
                    <TextView
                        android:layout_marginTop="1dp"
                        android:id="@+id/tv_upload_image_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="123dp"
                        android:text="@string/download_image_result"
                        />
                    <ImageView
                        android:id="@+id/iv_upload_image_result"
                        android:layout_width="256px"
                        android:layout_height="256px"
                        android:layout_marginStart="123dp"
                        />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>



</android.support.v7.widget.LinearLayoutCompat>